--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 server.error.include-stacktrace=never
 
 api.security.token.secret=${JWT_SECRET:xd123xd@@@@xd%##@xaaaaxd}
